part1/e13/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoproject-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoproject
  template:
    metadata:
      labels:
        app: todoproject
    spec:
      volumes:
        - name: project-volume
          persistentVolumeClaim:
            claimName: project-pv-claim
      containers:
        - name: todoproject
          image: vhmk/todoproject:2.0.1
          volumeMounts:
          - name: project-volume
            mountPath: /app/files
