part1/e13/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoproject-svc
spec:
  type: ClusterIP
  selector:
    app: todoproject
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
